--- a/product.html
+++ b/product.html
@@ -167,7 +167,7 @@
           <div class="container">
             <div class="header__top-inner">
               <div class="burger_menu">
-                 <span></span></div><a class="logo" href="main.html"><img class="logo__img" src="assets/img/logo.svg" alt="Vasko.ru"></a>
+                 <span></span></div><a class="logo" href="index.html"><img class="logo__img" src="assets/img/logo.svg" alt="Vasko.ru"></a>
               <div class="search">
                 <form class="search__field">
                   <input class="search__input" placeholder="Введите название товара">
